# spectral-BSLPM

./: .gitignore  CMakeLists.txt  README.md  initialize.py  namelist.txt  specBSLPM-config.h.in
executables/: CMakeLists.txt  bve_time_evo.cpp  deriv_test.cpp  poisson_eq_ds.cpp  poisson_eq_fmm.cpp  swe_time_evo.cpp  swe_time_evo_ll.cpp  test.cpp
src/: CMakeLists.txt  bve_time_step.cpp  bve_time_step.hpp  cubed_sphere_transforms.cpp  cubed_sphere_transforms.hpp  cubed_sphere_transforms_impl.hpp  deriv_funcs.cpp  deriv_funcs.hpp  deriv_funcs_impl.hpp  direct_sum.cpp  direct_sum.hpp  direct_sum_impl.hpp  fmm_funcs.cpp  fmm_funcs.hpp  fmm_funcs_impl.hpp  forcing_funcs.cpp  forcing_funcs.hpp  general_utils.cpp  general_utils.hpp  general_utils_impl.hpp  initial_conditions.cpp  initial_conditions.hpp  initialize_cubed_sphere.cpp  initialize_cubed_sphere.hpp  initialize_octo_sphere.cpp  initialize_octo_sphere.hpp  interp_funcs.cpp  interp_funcs.hpp  interp_funcs_impl.hpp  io_utils.cpp  io_utils.hpp  mpi_utils.cpp  mpi_utils.hpp  newton_solve.cpp  newton_solve.hpp  newton_solve_impl.hpp  run_config.hpp  swe_time_step.cpp  swe_time_step.hpp  swe_time_step_2.cpp  (+6 more)
src/fmm_interactions/: bve_vel.cpp  bve_vel.hpp  bve_vel_impl.hpp  inverse_poisson.cpp  inverse_poisson.hpp  inverse_poisson_impl.hpp  laplacian.cpp  laplacian.hpp  laplacian_impl.hpp  swe_vel.cpp  swe_vel.hpp  swe_vel_impl.hpp
